# Cpp-CompPhys

./: README.md  gnuplot-iostream.h  utils.cpp
Monte Carlo/Pi python/: README.org  monte_carlo_interference.py  monte_carlo_pi.py
Monte Carlo/Square-Circle-PI-cpp/: CMakeLists.txt  Makefile
Monte Carlo/Square-Circle-PI-cpp/src/: main.cpp
N Body Simulation/Particles in a box/: Particle.py  Simulator.py  Vec2.py  main.py
Oscillatory Motion/: forced_oscillations.cpp  shm_damped.cpp  shmd  simple_harmonic_euler.cpp
Projectiles and Satellites/: motion  motion_of_projectile_including_air_drag.cpp  two_dim_arb_motion.cpp  two_dimensional_motion.cpp
Trigonometry animation/: main.py
Waves and Wave Phenomenon/: fourier_analysis.cpp  youngs_double_slit.cpp
